--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,40 @@
 @import './fonts';
 @import './var';
 
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(59, 0, 59);
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: $green;
+    border-radius: 5px;
+}
+
 body {
     background: #000;
+    color: #fff;
+    font-family: 'Old';
+    font-size: 16px;
+    overflow-x: hidden;
+}
+.wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.container {
+    margin: 0 auto;
+
+    max-width: 1400px;
+    width: 100%;
+}
+.containerNoLim {
+    margin: 0 auto;
 }
